<resources>
    <string name="app_name">UberApp_Tim9</string>
    <string name="company_name">CarGoBrrr</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Lozinka</string>
    <string name="sign_in">Prijava</string>
    <string name="or">ili</string>
    <string name="sign_up">Registracija</string>
    <string name="logout">Odjava</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">email@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgot_password">Zaboravljena lozinka? Promenite </string>
    <string name="here">ovde</string>
    <string name="active">Aktivan</string>
    <string name="path">Putanja:</string>
    <string name="passengers">Putnici:</string>
    <string name="reviews">Ocene:</string>

    <string name="start">Početak:</string>
    <string name="end">Kraj:</string>

    <string name="menu_home">Početna</string>
    <string name="menu_inbox">Poruke</string>
    <string name="menu_account">Nalog</string>
    <string name="menu_ride_history">Istorija vožnji</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_passenger_main">PassengerMainActivity</string>
    <string name="register">Registracija</string>
    <string name="name_placeholder">Ime</string>
    <string name="surname_placeholder">Prezime</string>
    <string name="phone_number_placeholder">Broj telefona</string>
    <string name="adress_placeholder">Adresa</string>
    <string name="support">Tehnicka\npodrska</string>
    <string name="passenger_account_first_name">Ime</string>
    <string name="passenger_account_last_name">Prezime</string>
    <string name="profile_picture">profile picture</string>
    <string name="passenger_account_phone_number">Broj telefona</string>
    <string name="passenger_email">E-mail adresa</string>
    <string name="passenger_address">Adresa</string>
    <string name="passenger_account_blocked">Blokiran</string>
    <string name="password_repeat_placeholder">Ponovi lozinku</string>
    <string name="password_reset">Promena lozinke</string>
    <string name="new_password">Nova lozinka</string>
    <string name="repeat_new_password">Ponovi novu lozinku</string>
    <string name="reset">Promeni</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="permissions">Permisije</string>
    <string name="location_disabled_message">Aplikacija zahteva uključenu lokaciju. Da li želite da je uključite?</string>
    <string name="rejection">Razlog odbijanja</string>
    <string name="send">Pošalji</string>
    <string name="zeroLengthError">Polje ne sme biti prazno!</string>
    <string name="exchanged_messages">Razmenjene poruke</string>
    <string name="review">review</string>
    <string name="order_route_now">Poruči ovu rutu odmah</string>
    <string name="reserve_route">Zakaži ovu rutu za kasnije</string>
    <string name="add_to_favorites_route">Dodaj u omiljene rute</string>
    <string name="review_ride">Oceni vožnju</string>
    <string name="driver">Vozač:</string>
    <string name="start_ride">Započni vožnju</string>
    <string name="delete_from_favorites">Ukloni iz omiljenih</string>
    <string name="average">Prosek:</string>
    <string name="total">Ukupno:</string>
    <string name="from">Od:</string>
    <string name="to">Do:</string>
    <string name="panic">Panic</string>
    <string name="error_report">Prijavi grešku</string>
    <string name="reason_plain">Razlog</string>
    <string name="close">Zatvori</string>
    <string name="start_location_placeholder">Početna lokacija</string>
    <string name="end_location_placeholder">Krajnja lokacija</string>
    <string name="tip_vozila1">Standard</string>
    <string name="tip_vozila2">Luxury</string>
    <string name="tip_vozila3">Van</string>
    <string name="tip_vozila">Tip Vozila</string>
    <string name="start_time">Početak vožnje</string>
    <string name="poruci">Poruči</string>
    <string name="prefferences">Izbor</string>
    <string name="preferences">Izbor</string>
    <string name="baby_transport">Prevoze se bebe</string>
    <string name="pet_transport">Prevoze se ljubimci</string>
    <string name="add_passenger">Dodaj putnika</string>
    <string name="now_checkbox">Najskoriji Moguć</string>
</resources>