<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="passenger_nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/passenger_nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/passenger_nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/passenger_nav_ride_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_ride_history" />
        <item
            android:id="@+id/passenger_nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_account" />
    </group>
</menu>