<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/password_placeholder"
    android:background="@color/beige"
    tools:context=".registration.PassengerRegisterActivity">

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="164dp"
        android:layout_height="58dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/light_wine"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_input"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_input" />

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/phone_number_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/phone_number_placeholder"
        android:inputType="phone"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname_input" />

    <EditText
        android:id="@+id/surname_input"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/surname_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/surname_placeholder"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/adress_input"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/password_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_input2" />

    <EditText
        android:id="@+id/adress_input2"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/adress_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/adress_placeholder"
        android:inputType="textPostalAddress"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="339dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/name_placeholder"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_label" />

</androidx.constraintlayout.widget.ConstraintLayout>